8282662: Revert dubious changes