@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -434,7 +434,7 @@ public class Proxy implements java.io.Serializable {
             if (caller != null) {
                 checkProxyAccess(caller, loader, intfsArray);
             }
-            final List<Class<?>> intfs = List.of(intfsArray);
+            final List<Class<?>> intfs = Arrays.asList(intfsArray);
             return proxyCache.sub(intfs).computeIfAbsent(
                 loader,
                 (ld, clv) -> new ProxyBuilder(ld, clv.key()).build()
@@ -1233,7 +1233,7 @@ public class Proxy implements java.io.Serializable {
                     "\" is not a method declared in the proxy class");
         }
 
-        List<Class<?>> proxyInterfaces = List.of(proxyClass.getInterfaces());
+        List<Class<?>> proxyInterfaces = Arrays.asList(proxyClass.getInterfaces());
         // the method's declaring class is a proxy interface
         if (proxyInterfaces.contains(declaringClass))
             return declaringClass;
